# Open-Sora-Plan

./: .deepspeed_env  .gitignore  =0.8.2  LICENSE  LICENSE.txt  OWNERS  README.md  README_cn.md  Third-Party Open Source Software Notice.txt  bind_core.py  blog.html  blog_cn.html  demo_videovae.py  flower_inv.json  flower_inv_mse.json  flower_inv_psnr.json  fusion_result.json  gen_test_json.py  get_data_from_wandb.py  i2v.txt  index.html  inference_sora.py  inference_vlm.py  log_allinpaint_stage1.txt  log_allinpaint_stage1_2.txt  log_inpaint_93x320x320_stage1.txt  log_inpaint_93x320x320_stage1_swap.txt  make_lite_weight.py  make_lite_weight_del.py  make_small_json.py  merge_and_split_json.py  pretrain_internvl.py  pretrain_llava.py  pretrain_sora.py  pretrain_whisper.py  pyproject.toml  rdzv_run.sh  rdzv_run_base.sh  rdzv_run_noema.sh  rdzv_run_nomc2.sh  (+19 more)
.gitee/: PULL_REQUEST_TEMPLATE.md
DiT/: models.py  train.py  videodata.py
SiT/: 2d_RoPE.py  2d_RoPE_new.py  2d_YARN.py  download.py  models.py  sample.py  sample_ddp.py  train.py  train_utils.py  videodata.py
SiT_dynamic/: .gitignore  README.md  SiT_model_summary.txt  dataset_video.py  download.py  environment.yml  inference.sh  models.py  run_SiT.ipynb  sample.py  sample_videovae.py  train.py  train.sh  wandb_utils.py
VideoGPT/: rec_video.py  setup.py
assets/: 13 00_00_00-00_00_30.gif.REMOVED.git-id  5 00_00_00-00_00_30.gif.REMOVED.git-id  6 00_00_00-00_00_30.gif.REMOVED.git-id  7 00_00_00-00_00_30.gif.REMOVED.git-id  D_0_0.gif.REMOVED.git-id  demo_0006.gif.REMOVED.git-id  demo_0011.gif.REMOVED.git-id  dpvj8-y3ubn.gif.REMOVED.git-id  i1ude-11d4e.gif.REMOVED.git-id  kntw7-iuluy.gif.REMOVED.git-id  main.css  nr2a2-oe6qj.gif.REMOVED.git-id  ns4et-xj8ax.gif.REMOVED.git-id  open-sora-plan.png.REMOVED.git-id  origin_video_0.mp4.REMOVED.git-id  origin_video_1.mp4.REMOVED.git-id  ozg76-g1aqh.gif.REMOVED.git-id  pvvm5-5hm65.gif.REMOVED.git-id  rec_video_0.gif.REMOVED.git-id  rec_video_0.mp4.REMOVED.git-id  rec_video_1.gif.REMOVED.git-id  rec_video_2.gif.REMOVED.git-id  rec_video_3.gif.REMOVED.git-id  rrdqk-puoud.gif.REMOVED.git-id  y70q9-y5tip.gif.REMOVED.git-id
ci/: access_control_test.py  run_ci.sh
docker/: LICENSE  README.md  build.sh  build_ci.sh  docker_build.sh  docker_run.sh  dockerfile.base  packages.txt  placeholder  ports.txt  postinstallscript.sh  pull_ci.sh  push_ci.sh  requirements.txt  run.sh  run_ci.sh  setup_env.sh
docs/: CausalVideoVAE.md  Contribution_Guidelines.md  DATA.md  Data.md  EVAL.md  EVAL_README.md  I2V.md  Prompt_Refiner.md  Report-V1.5.0.md  Report-V1.5.0_cn.md  Report-v1.0.0-cn.md  Report-v1.0.0.md  Report-v1.1.0.md  Report-v1.2.0.md  Report-v1.3.0.md  Report-v1.5.0.md  Report-v1.5.0_cn.md  SECURITYNOTE.md  T2V.md  Train_And_Eval_CausalVideoVAE.md  VAE.md  VQVAE.md  causalvideovae.md  data.md  public_address_statement.md
eval/: cal_clip_score.sh
eval_code/: README.md  cal_psnr.py  clip_score.py
examples/: bak.txt  cond_pix_path.txt  cond_prompt.txt  conditional_images_path.txt  convert_pixart_to_latte.py  convert_udit_to_videoudit.py  dense_input.txt  inv.txt  (+30 more)
(+2752 files in other folders)
