[project]
name = "mindspeed-mm"
version = "0.1"
requires-python = ">=3.8"
description = "MindSpeed-MM is designed to provide end-to-end large multi-modal model solutions for Huawei's Ascend chips, including models, algorithms, and downstream tasks."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  { name = "The MindSpeed-MM Team" },
]
keywords = ["AI", "Ascend", "DeepLearning", "MultiModal", "MindSpeed"]
dependencies = [
    "numpy",
    "av",
    "ftfy",
    "bs4",
    "beartype",
    "timm==1.0.8",
    "pandas==2.0.3",
    "torch==2.1.0",
    "torchvision",
    "diffusers==0.30.3",
    "transformers==4.36.2",
    "accelerate==0.32.1",
    "pandarallel",
    "datasets"
]

[build-system]
requires = ["setuptools >= 65.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["ci*", "docs", "examples*", "sources", "tests"]

[project.optional-dependencies]
test = [
    "pytest",
    "transformers[sentencepiece]",
]

lint = [
    "black",
]

